# backi

./: .gitignore  CMakeLists.txt  README.md  main.cpp
inc/: Backi-core.h  backicore.h
src/: Backi-core.cpp  backicore.cpp
